--- a/style.css
+++ b/style.css
@@ -97,6 +97,69 @@
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.13);
 }
 
+@media screen and (max-width:320px){
+  .city {
+  color: #fff;
+  font-family: harmony-r;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1px;
+  padding: 0;
+  margin: 0;
+  }
+  .rank {
+  color: #fff;
+  font-family: harmony-l;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 1.3px;
+  padding: 0;
+  margin: 0;  
+}
+.citybox {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  padding: 5px 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  border-radius: 5px;
+  background: #A7CDFE;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.13);
+  box-shadow: inset 0 0 0 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 1s ease;
+  }
+  .year-container {
+  display: flex;
+  padding: 4px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  border-radius: 5px;
+  background: #8eb8ef;
+  box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.13);
+}
+.year-container p {
+  color: #fff;
+  font-family: harmony-m;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 0px;
+  margin-top: 5px;
+}
+}
+
 /*ANIMATION*/
 .citybox:hover {
   animation: hvr-grow 0.2s ease-in-out forwards;
